--- a/package.json
+++ b/package.json
@@ -10,14 +10,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.1",
+    "@react-native-community/geolocation": "^3.0.4",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/crashlytics": "^16.5.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-voice/voice": "^3.2.4",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "axios": "^1.2.2",
+    "geolib": "^3.3.3",
+    "lodash": "^4.17.21",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-compass-heading": "^1.4.2",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-permissions": "^3.6.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-tts": "^4.1.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/runtime": "^7.20.7",
     "@react-native-community/eslint-config": "^3.2.0",
     "babel-jest": "^29.3.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.31.0",
     "jest": "^29.3.1",
     "metro-react-native-babel-preset": "^0.74.0",
