--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "geolib": "^3.3.3",
     "lodash": "^4.17.21",
@@ -33,7 +34,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-tts": "^4.1.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
