--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -274,13 +274,21 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'com.google.vr:sdk-base:1.160.0'
     implementation 'com.google.vr:sdk-panowidget:1.170.0'
     implementation project(':audio')
+
+    implementation(project(':react-native-maps')){
+      exclude group: 'com.google.android.gms'
+    }
+
+    implementation 'com.google.android.gms:play-services-base:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
